--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon</title>
     <style>
+        
         body {
             display: flex;
             justify-content: center;
@@ -18,7 +19,24 @@
         h1 {
             font-size: 3rem;
         }
+        h1 {
+            font-size: 3rem;
+            display: flex;
+            align-items: center;
+        }
+        h1::before {
+            content: '';
+            display: inline-block;
+            width: 500px;
+            height: 500px;
+            margin-right: 10px;
+            background-image: url('1.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
     </style>
+   
 </head>
 <body>
     <h1>Coming Soon</h1>
